@startuml

title __INFORMES's Class Diagram__\n

  namespace com.example.cardihealt {
    namespace Informes {
      class com.example.cardihealt.Informes.InfoFragment {
          {static} - ARG_PARAM1 : String
          {static} - ARG_PARAM2 : String
          - mParam1 : String
          - mParam2 : String
          + InfoFragment()
          {static} + newInstance()
          + onCreate()
          + onCreateView()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Informes {
      class com.example.cardihealt.Informes.Informe {
          ~ actividadFisicaS : String
          ~ apellidoS : String
          ~ btnSiguiente : Button
          ~ edadS : String
          ~ estadoFisicoS : String
          ~ generoS : String
          ~ indiceMasaCorporalS : String
          ~ indiceTabacS : String
          ~ nombreS : String
          ~ perimetroAbdominalS : String
          ~ riesgoAntecedentesS : String
          ~ riesgoEdadS : String
          ~ riesgoEnfermedadesS : String
          ~ riesgoEpocS : String
          ~ riesgoEstimadoS : String
          ~ riesgoLetaS : String
          ~ riesgoPerAbS : String
          - mAuth : FirebaseAuth
          - mDatabase : DatabaseReference
          + informe()
          + onClick()
          # onCreate()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Informes {
      class com.example.cardihealt.Informes.InformeFinal {
          ~ tabLayout : TabLayout
          ~ viewPager : ViewPager
          - dato1 : String
          - dato2 : String
          - dato3 : String
          - dato4 : String
          - dato5 : String
          + editarText1()
          + editarText2()
          + editarText3()
          + editarText4()
          + editarText5()
          # onCreate()
          - prepareViewPager()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Informes {
      class com.example.cardihealt.Informes.InformeFinal.MainAdapter {
          ~ arrayList : ArrayList<String>
          ~ fragmentList : List<Fragment>
          + MainAdapter()
          + addFragment()
          + getCount()
          + getItem()
          + getPageTitle()
      }
    }
  }
  

  com.example.cardihealt.Informes.InfoFragment -up-|> androidx.fragment.app.Fragment
  com.example.cardihealt.Informes.Informe .up.|> android.view.View.OnClickListener
  com.example.cardihealt.Informes.Informe -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.cardihealt.Informes.InformeFinal -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.cardihealt.Informes.InformeFinal +-down- com.example.cardihealt.Informes.InformeFinal.MainAdapter
  com.example.cardihealt.Informes.InformeFinal.MainAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
